--- a/app/assets/app.css
+++ b/app/assets/app.css
@@ -69,7 +69,11 @@ md-sidenav md-list {
 }
 
 span.name {
-  font-weight: bold;
-  font-size:1.1em;
-  padding-left:5px;
+    font-weight: bold;
+    font-size: 1.1em;
+    padding-left: 5px;
+}
+
+.date-row {
+    margin: 16px 0px;
 }
